# guv-calcs

./: .gitmodules  Dockerfile  LICENSE  Makefile  README.md  guv_app.py  guv_app1.py  pyproject.toml  requirements.txt  setup.py  test.py  test_app.py  update_ies.sh
.github/workflows/: ci.yml  ci.yml   python-package.yml
.streamlit/: config.toml
app/: _sidebar.py  _top_ribbon.py  _widget.py
data/: disinfection_table.csv
data/ies_files/: B1 module.ies  LLIA001477-002.ies  uvpro222_b1.ies  uvpro222_b2.ies
guv_calcs/: __init__.py  _calculate.py  _plot.py  _results.py  _sidebar.py  _top_ribbon.py  _website_helpers.py  _widget.py  calc_zone.py  lamp.py  room.py
ies_files/: B1.5 module.ies  LLIA001477-003.ies
src/guv_calcs/: __init__.py  _calculate.py  _data.py  _helpers.py  _read.py  _units.py  calc_manager.py  calc_manager_new.py  calc_zone.py  calc_zone_new.py  disinfection_calculator.py  geometry.py  io.py  lamp.py  lamp_helpers.py  lamp_plotter.py  lamp_surface.py  reflectance.py  room.py  room_plotter.py  scene.py  spectrum.py  trigonometry.py  units.py
src/guv_calcs/data/: UV Spectral Weighting Curves.csv  UVC Inactivation Constants.csv
src/guv_calcs/data/lamp_data/: B1 module.ies  aerolamp.csv  aerolamp.ies  beacon.csv  beacon.ies  lumenizer_zone.csv  lumenizer_zone.ies  nukit.ies  nukit_lantern.ies  nukit_torch.csv  nukit_torch.ies  sterilray.ies  sterilray_germbuster.csv  ushio_b1.5.csv  ushio_b1.5.ies  ushio_b1.csv  ushio_b1.ies  uvpro222_b1.ies  uvpro222_b2.csv  uvpro222_b2.ies  visium.csv  (+1 more)
tests/: test.guv  test.py  uvpro222_b1_spectrum.csv
