[project]
name = "guv-calcs"
version = "0.4.13"
description = "A library for carrying out fluence and irradiance calculations for germicidal UV (GUV) applications."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib==3.8.4",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "photompy==0.0.8",
  "plotly==5.22.0",
  "scipy==1.13.1",
  "setuptools==68.2.2",
  "kaleido==0.2.1",
  "seaborn==0.13.2"
]
